--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mypool",
-  "host": "https://mypool123.herokuapp.com",
-  "github": "https://raw.githubusercontent.com/sbutch",
+  "host": "https://myte1001.herokuapp.com",
+  "github": "https://raw.githubusercontent.com/sbutch/mylist/master/",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "net": "^1.0.2",
