--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "name": "mypool",
-  "host": "https://myte1002.herokuapp.com",
-  "github": "https://raw.githubusercontent.com/sbutch/mylist/master/",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
@@ -11,10 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "net": "^1.0.2",
     "request": "^2.88.2"
   }
 }
+
